@@ -8,8 +8,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>369</width>
-    <height>210</height>
+    <width>382</width>
+    <height>246</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -23,41 +23,13 @@
     <number>6</number>
    </property>
    <item row="0" column="0" >
-    <widget class="QTableWidget" name="table" >
-     <property name="alternatingRowColors" >
-      <bool>false</bool>
+    <widget class="QLabel" name="label" >
+     <property name="text" >
+      <string>Active sessions:</string>
      </property>
-     <property name="selectionMode" >
-      <enum>QAbstractItemView::SingleSelection</enum>
-     </property>
-     <property name="selectionBehavior" >
-      <enum>QAbstractItemView::SelectRows</enum>
-     </property>
-     <property name="showGrid" >
-      <bool>false</bool>
-     </property>
-     <property name="rowCount" >
-      <number>3</number>
-     </property>
-     <property name="sortingEnabled" >
-      <bool>true</bool>
-     </property>
-     <row/>
-     <row/>
-     <row/>
-     <column>
-      <property name="text" >
-       <string>pid</string>
-      </property>
-     </column>
-     <column>
-      <property name="text" >
-       <string>title</string>
-      </property>
-     </column>
     </widget>
    </item>
-   <item row="0" column="1" >
+   <item rowspan="2" row="0" column="1" >
     <layout class="QVBoxLayout" >
      <property name="margin" >
       <number>0</number>
@@ -107,6 +79,13 @@
       </spacer>
      </item>
     </layout>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QListWidget" name="listConnections" >
+     <property name="selectionBehavior" >
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
